<resources>
    <string name="app_name">lab4</string>
    <string name="activity_1">Activity 1</string>
    <string name="hint_editText">Введите имя</string>
    <string name="next">NEXT</string>
    <string name="fio">Мельничук Арина Дмитриевна, гр. БОМ41ПРИ</string>
    <string name="activity_2">Activity 2</string>
    <string name="end">Вы ввели:</string>
    <string name="back">BACK</string>
    <string name="empty" />
</resources>